--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ black==25.9.0
 fastapi[standard]==0.120.1
 fastapi-etag==0.4.0
 gunicorn==23.0.0
+httpx==0.28.1
 pydantic-settings==2.11.0
 telnetlib3==2.0.8
 upnpclient==1.0.3
