chore: add pre-commit with ruff, fix all lint errors
Replace black/isort with ruff for linting and formatting. Add pre-commit
hooks to catch lint issues before commit. Fix all existing violations:
- Remove unused imports and variables
- Replace bare excepts with specific exception types
- Fix None comparison (== None -> is None)
- Fix raw string for regex pattern
- Sort imports
- Reformat to 120-char line length

CI lint workflow updated to use astral-sh/ruff-action.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,17 +24,23 @@ dependencies = { file = ["requirements.txt"] }
 [tool.setuptools.packages]
 find = {}
 
-[tool.black]
+[tool.ruff]
+target-version = "py312"
+line-length = 120
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-known_first_party = ["soundcork"]
-combine_as_imports = true
-include_trailing_comma = true
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+
+[tool.ruff.lint.per-file-ignores]
+"soundcork/main.py" = ["E402"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["soundcork"]
+
+[tool.pytest.ini_options]
+filterwarnings = ["error::SyntaxWarning"]
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
-
 
 [tool.pydantic-mypy]
