--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,21 +7,13 @@ on:
     branches: [main]
 
 jobs:
-  quality_tests:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.12"]
     steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-python@v6
+      - uses: actions/checkout@v4
+      - uses: astral-sh/ruff-action@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
-      - name: Install Dependencies
-        run: pip install -r requirements.txt
-      - name: Run Linters
-        run: |
-          black .
-          isort .
-          mypy .
+          args: check
+      - uses: astral-sh/ruff-action@v3
+        with:
+          args: format --check
